const sass = require('node-sass');

describe('mixins test', () => {
  function setup(source) {
    return sass
      .renderSync({
        data: `
        @import 'projects/bdir/src/lib/styles/mixins.scss';
        ${source}
      `
      })
      .css.toString();
  }

  it('should create an encapsulated content', function() {
    const source = `
      h1 {
        @include encapsulation(true, '.test') {
          height: 10px;
        };
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for border end', () => {
    const source = `
      h1 {
        @include border-end(1px solid black);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for margin end', () => {
    const source = `
      h1 {
        @include margin-end(20px);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for padding start', () => {
    const source = `
      h1 {
        @include padding-start(20px);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for float', () => {
    const source = `
      div {
        @include float();
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for dir', () => {
    const source = `
      div {
        @include dir(true);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for start (left / right) positioning', () => {
    const source = `
      div {
        @include start(40px);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for translating', () => {
    const source = `
      div {
        @include transformTranslate(5px, 5px);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for scaling', () => {
    const source = `
      div {
        @include transformScale(5px, 5px);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for mirroring', () => {
    const source = `
      div {
        @include mirror();
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });

  it('should create an rtl ltr support for rotating', () => {
    const source = `
      div {
        @include transformRotate(45deg);
      }
    `;
    const css = setup(source);
    expect(css).toMatchSnapshot();
  });
});
