// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixins test should create an encapsulated content 1`] = `
":host-context(.test) h1 {
  height: 10px; }
"
`;

exports[`mixins test should create an rtl ltr support for border end 1`] = `
":host-context(*[dir=ltr]) h1 {
  border-right: 1px solid black; }

:host-context(*[dir=rtl]) h1 {
  border-left: 1px solid black; }
"
`;

exports[`mixins test should create an rtl ltr support for dir 1`] = `
":host-context(*[dir=ltr]) div {
  direction: left; }

:host-context(*[dir=rtl]) div {
  direction: right; }
"
`;

exports[`mixins test should create an rtl ltr support for float 1`] = `
":host-context(*[dir=ltr]) div {
  float: left; }

:host-context(*[dir=rtl]) div {
  float: right; }
"
`;

exports[`mixins test should create an rtl ltr support for margin end 1`] = `
":host-context(*[dir=ltr]) h1 {
  margin-right: 20px; }

:host-context(*[dir=rtl]) h1 {
  margin-left: 20px; }
"
`;

exports[`mixins test should create an rtl ltr support for mirroring 1`] = `
":host-context(*[dir=ltr]) div {
  transform: scale(1, 1); }

:host-context(*[dir=rtl]) div {
  transform: scale(-1, 1); }
"
`;

exports[`mixins test should create an rtl ltr support for padding start 1`] = `
":host-context(*[dir=ltr]) h1 {
  padding-left: 20px; }

:host-context(*[dir=rtl]) h1 {
  padding-right: 20px; }
"
`;

exports[`mixins test should create an rtl ltr support for rotating 1`] = `
":host-context(*[dir=ltr]) div {
  transform: rotate(45deg); }

:host-context(*[dir=rtl]) div {
  transform: rotate(-135deg); }
"
`;

exports[`mixins test should create an rtl ltr support for scaling 1`] = `
":host-context(*[dir=ltr]) div {
  transform: scale(5px, 5px); }

:host-context(*[dir=rtl]) div {
  transform: scale(-5px, 5px); }
"
`;

exports[`mixins test should create an rtl ltr support for start (left / right) positioning 1`] = `
":host-context(*[dir=ltr]) div {
  left: 40px; }

:host-context(*[dir=rtl]) div {
  right: 40px; }
"
`;

exports[`mixins test should create an rtl ltr support for translating 1`] = `
":host-context(*[dir=ltr]) div {
  transform: translate(5px, 5px); }

:host-context(*[dir=rtl]) div {
  transform: translate(-5px, 5px); }
"
`;
